# putain

./: Cargo.toml  README.md
.github/workflows/: release.yml
plugins/: docker.toml  git.toml  permissions.toml
src/: config.rs  hook.rs  lib.rs  main.rs  matcher.rs  personality.rs  shell.rs
src/plugins/: mod.rs  toml_rule.rs
src/rules/: builtin.rs  mod.rs
tests/: cli_test.rs  config_test.rs  hook_test.rs  matcher_test.rs  personality_test.rs  plugins_test.rs  rules_test.rs  shell_test.rs
